2010-07-02  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Handle <image> in new parser
        https://bugs.webkit.org/show_bug.cgi?id=41555

        Test progression.

        * html5lib/runner-expected-html5.txt:

2010-07-02  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY (test fix).

        Fix test to account for the arg count clamping we do with function.apply

        * fast/js/script-tests/function-apply-aliased.js:
        (stackOverflowTest):

2010-07-02  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Clamp the number of arguments supported by function.apply
        https://bugs.webkit.org/show_bug.cgi?id=41351
        <rdar://problem/8142141>

        Testcases.

        * fast/js/function-apply-many-args-expected.txt: Added.
        * fast/js/function-apply-many-args.html: Added.
        * fast/js/script-tests/function-apply-many-args.js: Added.

2010-07-02  Peter Kasting  <pkasting@google.com>

        Unreviewed, test expectation update.

        Mark a newly added test as crashing.

        * platform/chromium/test_expectations.txt:

2010-07-02  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Oliver Hunt.

        Add test to verify proper clamping of RGB values.
        https://bugs.webkit.org/show_bug.cgi?id=39482

        Also unskip 3 canvas/philip tests that now pass.

        Spec link:
        http://www.whatwg.org/specs/web-apps/current-work/#colors

        * fast/canvas/canvas-color-clamping-expected.txt: Added.
        * fast/canvas/canvas-color-clamping.html: Added.
        * fast/canvas/script-tests/canvas-color-clamping.js: Added.
        * platform/mac/Skipped:
        * platform/qt/Skipped:

2010-07-02  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Darin Fisher.

        Minor change to a DB test to make it run correctly with run-webkit-tests --iterations N.
        https://bugs.webkit.org/show_bug.cgi?id=41404
